--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
 		"start": "node index.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.16.4",
-		"cors": "^2.8.5"
+		"mongoose": "^7.0.3",
+		"shortid": "^2.2.16"
 	},
 	"repository": {
 		"url": "https://github.com/freeCodeCamp/boilerplate-project-exercisetracker"
